# Orion

./: .gitignore  README.md  preview_ui.html
orion v94/: settings.gradle.kts
orion v94/app/: build.gradle.kts  proguard-rules.pro
orion v94/app/src/main/: AndroidManifest.xml
orion v94/app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
orion v94/app/src/main/java/com/orion/: proyectoorion.rar
orion v94/app/src/main/java/com/orion/proyectoorion/: MainActivity.kt  OrionApplication.kt  README.md
orion v94/app/src/main/java/com/orion/proyectoorion/ai/: LlamaAndroid.kt  LocalLLMEngine.kt
orion v94/app/src/main/java/com/orion/proyectoorion/data/: DataManager.kt  Languages.kt  UiStrings.kt
orion v94/app/src/main/java/com/orion/proyectoorion/emergency/: ApkServer.kt  ApkSharing.kt  DEPENDENCIES.md  EmergencyContacts.kt  EmergencyCrypto.kt  EmergencyNotifications.kt  EmergencyStrings.kt  EmergencyUI.kt  INSTRUCCIONES.md  INSTRUCTIONS.md  MeshEmergency.kt  PortraitCaptureActivity.kt
orion v94/app/src/main/java/com/orion/proyectoorion/models/: CloudModels.kt  CloudProviders.kt  LocalModels.kt
orion v94/app/src/main/res/: ic_provider_qwen.xml
orion v94/app/src/main/res/drawable/: ic_orion_add.xml  ic_orion_analyzing.xml  ic_orion_brain.xml  ic_orion_cloud.xml  ic_orion_delete.xml  ic_orion_emergency.xml  ic_orion_export.xml  ic_orion_import.xml  ic_orion_local.xml  ic_orion_logout.xml  ic_orion_memory.xml  ic_orion_memory_item.xml  ic_orion_responding.xml  ic_orion_thinking.xml  ic_orion_vivo.xml  ic_orion_warning.xml  ic_provider_deepseek.xml  ic_provider_kimi.xml
orion v94/app/src/main/res/font/: orion_display_black.xml  orion_mono_medium.xml  orion_mono_regular.xml
orion v94/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
orion v94/app/src/main/res/values-v31/: themes.xml
orion v94/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
orion v94/gradle/: libs.versions.toml
(+11 files in other folders)
